# HybridRenderer

./: .gitignore  CMakeLists.txt  Contributing.md  FullTest.bat  Quick_test.sh  README.md  TestHeadless.bat  Tests.bat  build.bat  build.sh  rebuild.bat  test_full.bat  test_full.sh  test_quick.bat
.github/workflows/: badge.yml  ci.yml
docs/: TestResults.md  bugs_found.md  cross_platform_testing.md  installation_linux.md  installation_macos.md
shaders/: triangle.frag  triangle.vert
src/: main.cpp
src/interfaces/: IGraphicsContext.h  IWindow.h
src/platform/: GLFWWindow.cpp  GLFWWindow.h
src/renderer/: Renderer.cpp  Renderer.h
src/utils/: logger.h
src/vulkan/: VulkanContext.cpp  VulkanContext.h
tests/: VulkanContextTest.cpp  WindowTest.cpp  main_test.cpp
tests/integration/: README.md  VulkanContextIntegrationTest.cpp  WindowIntegrationTest.cpp
tests/mocks/: MockGraphicsContext.h  MockWindow.h  TestUtils.h
tests/unit/: MockObjectsTest.cpp  RendererUnitTest.cpp  WindowUnitTest.cpp
